Enhance pom.